# eqx3d

./: README.md  pyproject.toml
.github/workflows/: run-tests.yaml
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: demo.py
src/eqx3d/: ball_query.py  fps.py  pointnet.py
tests/: ball_query_test.py  fps_test.py  pointnet_test.py
