[project]
name = "eqx3d"
version = "0.1.0"
description = "JAX+Equinox implementation of 3D neural networks."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
authors = [{ email = "ben.a.eisner@gmail.com", name = "Ben Eisner" }]
dependencies = ["equinox", "jax"]

[build-system]
requires = ["setuptools >= 62.3.2", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "autoflake == 2.1.1",
  "black == 23.3.0",
  "isort == 5.12.0",
  "mypy == 1.3.0",
  "pylint == 2.17.4",
  "pytest == 7.3.2",
  "pytest-benchmark == 4.0.0",
  "pre-commit == 3.3.3",
]
notebooks = ["jupyter"]
build_docs = ["mkdocs-material", "mkdocstrings[python]"]
examples = ["optax", "torch", "torch_geometric", "tqdm"]

# This is required to allow us to have notebooks/ at the top level.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eqx3d = ["py.typed"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# Pytest settings.
[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip benchmarking tests.
addopts = ["--benchmark-skip"]

# Uncomment this when you have imports for mypy to ignore.
[[tool.mypy.overrides]]
module = ["equinox.*"]
ignore_missing_imports = true
